template.json
{
  "contentVersion": "1.0.0.0",
  "parameters": {},
  "resources": [
    {
      "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Compute/virtualMachineScaleSets/nt0",
      "tags": {
        "resourceType": "Service Fabric",
        "clusterName": "sfjagilber1nt3",
        "patchtest": "True"
      },
      "properties": {
        "singlePlacementGroup": true,
        "upgradePolicy": {
          "mode": "Automatic"
        },
        "virtualMachineProfile": {
          "osProfile": {
            "computerNamePrefix": "nt0",
            "adminUsername": "cloudadmin",
            "windowsConfiguration": {
              "provisionVMAgent": true,
              "enableAutomaticUpdates": false
            },
            "secrets": [
              {
                "sourceVault": {
                  "id": "***REMOVED***"
                },
                "vaultCertificates": [
                  {
                    "certificateUrl": "https://sfjagilber.vault.azure.net/secrets/sfjagilber/***REMOVED***",
                    "certificateStore": "My"
                  }
                ]
              }
            ]
          },
          "storageProfile": {
            "osDisk": {
              "createOption": "FromImage",
              "caching": "ReadOnly",
              "managedDisk": {
                "storageAccountType": "Standard_LRS"
              },
              "diskSizeGB": 127
            },
            "imageReference": {
              "publisher": "MicrosoftWindowsServer",
              "offer": "WindowsServer",
              "sku": "2019-Datacenter-with-containers",
              "version": "latest"
            }
          },
          "networkProfile": {
            "networkInterfaceConfigurations": [
              {
                "name": "NIC-0",
                "properties": {
                  "primary": true,
                  "enableAcceleratedNetworking": false,
                  "dnsSettings": {
                    "dnsServers": []
                  },
                  "enableIPForwarding": false,
                  "ipConfigurations": [
                    {
                      "name": "NIC-0",
                      "properties": {
                        "subnet": {
                          "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/virtualNetworks/VNet/subnets/Subnet-0"
                        },
                        "privateIPAddressVersion": "IPv4",
                        "loadBalancerBackendAddressPools": [
                          {
                            "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/backendAddressPools/LoadBalancerBEAddressPool"
                          }
                        ],
                        "loadBalancerInboundNatPools": [
                          {
                            "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/inboundNatPools/LoadBalancerBEAddressNatPool"
                          }
                        ]
                      }
                    }
                  ]
                }
              }
            ]
          },
          "extensionProfile": {
            "extensions": [
              {
                "name": "nt0_ServiceFabricNode",
                "properties": {
                  "autoUpgradeMinorVersion": true,
                  "publisher": "Microsoft.Azure.ServiceFabric",
                  "type": "ServiceFabricNode",
                  "typeHandlerVersion": "1.0",
                  "settings": {
                    "clusterEndpoint": "https://eastus.servicefabric.azure.com/runtime/clusters/139eab6c-7084-4ca4-8cc9-699af0001840",
                    "nodeTypeRef": "nt0",
                    "dataPath": "D:\\\\SvcFab",
                    "durabilityLevel": "Bronze",
                    "enableParallelJobs": true,
                    "nicPrefixOverride": "10.0.0.0/24",
                    "certificate": {
                      "thumbprint": "***REMOVED***",
                      "x509StoreName": "My"
                    }
                  }
                }
              },
              {
                "name": "VMDiagnosticsVmExt_vmNodeType0Name",
                "properties": {
                  "autoUpgradeMinorVersion": true,
                  "publisher": "Microsoft.Azure.Diagnostics",
                  "type": "IaaSDiagnostics",
                  "typeHandlerVersion": "1.5",
                  "settings": {
                    "WadCfg": {
                      "DiagnosticMonitorConfiguration": {
                        "overallQuotaInMB": "50000",
                        "EtwProviders": {
                          "EtwEventSourceProviderConfiguration": [
                            {
                              "provider": "Microsoft-ServiceFabric-Actors",
                              "scheduledTransferKeywordFilter": "1",
                              "scheduledTransferPeriod": "PT5M",
                              "DefaultEvents": {
                                "eventDestination": "ServiceFabricReliableActorEventTable"
                              }
                            },
                            {
                              "provider": "Microsoft-ServiceFabric-Services",
                              "scheduledTransferPeriod": "PT5M",
                              "DefaultEvents": {
                                "eventDestination": "ServiceFabricReliableServiceEventTable"
                              }
                            }
                          ],
                          "EtwManifestProviderConfiguration": [
                            {
                              "provider": "cbd93bc2-71e5-4566-b3a7-595d8eeca6e8",
                              "scheduledTransferLogLevelFilter": "Information",
                              "scheduledTransferKeywordFilter": "4611686018427387904",
                              "scheduledTransferPeriod": "PT5M",
                              "DefaultEvents": {
                                "eventDestination": "ServiceFabricSystemEventTable"
                              }
                            }
                          ]
                        }
                      }
                    },
                    "StorageAccount": "bmnjfzoagi7jc3"
                  }
                }
              },
              {
                "name": "MMAExtension",
                "properties": {
                  "autoUpgradeMinorVersion": true,
                  "publisher": "Microsoft.EnterpriseCloud.Monitoring",
                  "type": "MicrosoftMonitoringAgent",
                  "typeHandlerVersion": "1.0",
                  "settings": {
                    "workspaceId": "4c56471a-7c26-4d4d-9c05-4ea067dfa775",
                    "stopOnMultipleConnections": "true"
                  }
                }
              }
            ]
          }
        },
        "provisioningState": "Succeeded",
        "overprovision": false,
        "doNotRunExtensionsOnOverprovisionedVMs": false,
        "uniqueId": "ccf851f2-b941-4a87-86bc-2ee78da503af"
      },
      "location": "eastus",
      "name": "nt0",
      "type": "Microsoft.Compute/virtualMachineScaleSets",
      "apiVersion": "2020-06-01"
    },
    {
      "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0",
      "tags": {
        "resourceType": "Service Fabric",
        "clusterName": "sfjagilber1nt3",
        "patchtest": "True"
      },
      "properties": {
        "provisioningState": "Succeeded",
        "resourceGuid": "c5ca6e7e-c306-4415-bf8d-18de0f3f0ea4",
        "frontendIPConfigurations": [
          {
            "name": "LoadBalancerIPConfig",
            "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/frontendIPConfigurations/LoadBalancerIPConfig",
            "etag": "W/\"1664fd07-dcba-410b-9f63-46b85d78953a\"",
            "type": "Microsoft.Network/loadBalancers/frontendIPConfigurations",
            "properties": {
              "provisioningState": "Succeeded",
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/publicIPAddresses/PublicIP-LB-FE-0"
              },
              "loadBalancingRules": [
                {
                  "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/loadBalancingRules/LBRule"
                },
                {
                  "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/loadBalancingRules/LBHttpRule"
                }
              ],
              "inboundNatRules": [
                {
                  "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/inboundNatRules/LoadBalancerBEAddressNatPool.0"
                },
                {
                  "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/inboundNatRules/LoadBalancerBEAddressNatPool.1"
                },
                {
                  "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/inboundNatRules/LoadBalancerBEAddressNatPool.2"
                }
              ],
              "inboundNatPools": [
                {
                  "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/inboundNatPools/LoadBalancerBEAddressNatPool"
                }
              ],
              "privateIPAddressVersion": "IPv4"
            }
          }
        ],
        "backendAddressPools": [
          {
            "name": "LoadBalancerBEAddressPool",
            "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/backendAddressPools/LoadBalancerBEAddressPool",
            "etag": "W/\"1664fd07-dcba-410b-9f63-46b85d78953a\"",
            "properties": {
              "provisioningState": "Succeeded",
              "backendIPConfigurations": [
                {
                  "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Compute/virtualMachineScaleSets/nt0/virtualMachines/0/networkInterfaces/NIC-0/ipConfigurations/NIC-0"
                },
                {
                  "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Compute/virtualMachineScaleSets/nt0/virtualMachines/1/networkInterfaces/NIC-0/ipConfigurations/NIC-0"
                },
                {
                  "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Compute/virtualMachineScaleSets/nt0/virtualMachines/2/networkInterfaces/NIC-0/ipConfigurations/NIC-0"
                }
              ],
              "loadBalancingRules": [
                {
                  "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/loadBalancingRules/LBRule"
                },
                {
                  "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/loadBalancingRules/LBHttpRule"
                }
              ]
            },
            "type": "Microsoft.Network/loadBalancers/backendAddressPools"
          }
        ],
        "loadBalancingRules": [
          {
            "name": "LBRule",
            "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/loadBalancingRules/LBRule",
            "etag": "W/\"1664fd07-dcba-410b-9f63-46b85d78953a\"",
            "type": "Microsoft.Network/loadBalancers/loadBalancingRules",
            "properties": {
              "provisioningState": "Succeeded",
              "frontendIPConfiguration": {
                "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/frontendIPConfigurations/LoadBalancerIPConfig"
              },
              "frontendPort": 19000,
              "backendPort": 19000,
              "enableFloatingIP": false,
              "idleTimeoutInMinutes": 5,
              "protocol": "Tcp",
              "enableDestinationServiceEndpoint": false,
              "enableTcpReset": false,
              "allowBackendPortConflict": false,
              "loadDistribution": "Default",
              "backendAddressPool": {
                "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/backendAddressPools/LoadBalancerBEAddressPool"
              },
              "probe": {
                "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/probes/FabricGatewayProbe"
              }
            }
          },
          {
            "name": "LBHttpRule",
            "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/loadBalancingRules/LBHttpRule",
            "etag": "W/\"1664fd07-dcba-410b-9f63-46b85d78953a\"",
            "type": "Microsoft.Network/loadBalancers/loadBalancingRules",
            "properties": {
              "provisioningState": "Succeeded",
              "frontendIPConfiguration": {
                "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/frontendIPConfigurations/LoadBalancerIPConfig"
              },
              "frontendPort": 19080,
              "backendPort": 19080,
              "enableFloatingIP": false,
              "idleTimeoutInMinutes": 5,
              "protocol": "Tcp",
              "enableDestinationServiceEndpoint": false,
              "enableTcpReset": false,
              "allowBackendPortConflict": false,
              "loadDistribution": "Default",
              "backendAddressPool": {
                "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/backendAddressPools/LoadBalancerBEAddressPool"
              },
              "probe": {
                "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/probes/FabricHttpGatewayProbe"
              }
            }
          }
        ],
        "probes": [
          {
            "name": "FabricGatewayProbe",
            "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/probes/FabricGatewayProbe",
            "etag": "W/\"1664fd07-dcba-410b-9f63-46b85d78953a\"",
            "properties": {
              "provisioningState": "Succeeded",
              "protocol": "Tcp",
              "port": 19000,
              "intervalInSeconds": 5,
              "numberOfProbes": 2,
              "loadBalancingRules": [
                {
                  "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/loadBalancingRules/LBRule"
                }
              ]
            },
            "type": "Microsoft.Network/loadBalancers/probes"
          },
          {
            "name": "FabricHttpGatewayProbe",
            "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/probes/FabricHttpGatewayProbe",
            "etag": "W/\"1664fd07-dcba-410b-9f63-46b85d78953a\"",
            "properties": {
              "provisioningState": "Succeeded",
              "protocol": "Tcp",
              "port": 19080,
              "intervalInSeconds": 5,
              "numberOfProbes": 2,
              "loadBalancingRules": [
                {
                  "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/loadBalancingRules/LBHttpRule"
                }
              ]
            },
            "type": "Microsoft.Network/loadBalancers/probes"
          }
        ],
        "inboundNatRules": [
          {
            "name": "LoadBalancerBEAddressNatPool.0",
            "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/inboundNatRules/LoadBalancerBEAddressNatPool.0",
            "etag": "W/\"1664fd07-dcba-410b-9f63-46b85d78953a\"",
            "type": "Microsoft.Network/loadBalancers/inboundNatRules",
            "properties": {
              "provisioningState": "Succeeded",
              "frontendIPConfiguration": {
                "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/frontendIPConfigurations/LoadBalancerIPConfig"
              },
              "frontendPort": 3389,
              "backendPort": 3389,
              "enableFloatingIP": false,
              "idleTimeoutInMinutes": 4,
              "protocol": "Tcp",
              "enableDestinationServiceEndpoint": false,
              "enableTcpReset": false,
              "allowBackendPortConflict": false,
              "backendIPConfiguration": {
                "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Compute/virtualMachineScaleSets/nt0/virtualMachines/0/networkInterfaces/NIC-0/ipConfigurations/NIC-0"
              }
            }
          },
          {
            "name": "LoadBalancerBEAddressNatPool.1",
            "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/inboundNatRules/LoadBalancerBEAddressNatPool.1",
            "etag": "W/\"1664fd07-dcba-410b-9f63-46b85d78953a\"",
            "type": "Microsoft.Network/loadBalancers/inboundNatRules",
            "properties": {
              "provisioningState": "Succeeded",
              "frontendIPConfiguration": {
                "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/frontendIPConfigurations/LoadBalancerIPConfig"
              },
              "frontendPort": 3390,
              "backendPort": 3389,
              "enableFloatingIP": false,
              "idleTimeoutInMinutes": 4,
              "protocol": "Tcp",
              "enableDestinationServiceEndpoint": false,
              "enableTcpReset": false,
              "allowBackendPortConflict": false,
              "backendIPConfiguration": {
                "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Compute/virtualMachineScaleSets/nt0/virtualMachines/1/networkInterfaces/NIC-0/ipConfigurations/NIC-0"
              }
            }
          },
          {
            "name": "LoadBalancerBEAddressNatPool.2",
            "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/inboundNatRules/LoadBalancerBEAddressNatPool.2",
            "etag": "W/\"1664fd07-dcba-410b-9f63-46b85d78953a\"",
            "type": "Microsoft.Network/loadBalancers/inboundNatRules",
            "properties": {
              "provisioningState": "Succeeded",
              "frontendIPConfiguration": {
                "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/frontendIPConfigurations/LoadBalancerIPConfig"
              },
              "frontendPort": 3391,
              "backendPort": 3389,
              "enableFloatingIP": false,
              "idleTimeoutInMinutes": 4,
              "protocol": "Tcp",
              "enableDestinationServiceEndpoint": false,
              "enableTcpReset": false,
              "allowBackendPortConflict": false,
              "backendIPConfiguration": {
                "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Compute/virtualMachineScaleSets/nt0/virtualMachines/2/networkInterfaces/NIC-0/ipConfigurations/NIC-0"
              }
            }
          }
        ],
        "inboundNatPools": [
          {
            "name": "LoadBalancerBEAddressNatPool",
            "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/inboundNatPools/LoadBalancerBEAddressNatPool",
            "etag": "W/\"1664fd07-dcba-410b-9f63-46b85d78953a\"",
            "properties": {
              "provisioningState": "Succeeded",
              "frontendPortRangeStart": 3389,
              "frontendPortRangeEnd": 4500,
              "backendPort": 3389,
              "protocol": "Tcp",
              "idleTimeoutInMinutes": 4,
              "enableFloatingIP": false,
              "enableDestinationServiceEndpoint": false,
              "enableTcpReset": false,
              "allowBackendPortConflict": false,
              "frontendIPConfiguration": {
                "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/frontendIPConfigurations/LoadBalancerIPConfig"
              }
            },
            "type": "Microsoft.Network/loadBalancers/inboundNatPools"
          }
        ]
      },
      "location": "eastus",
      "name": "LB-sfjagilber1nt3-nt0",
      "type": "Microsoft.Network/loadBalancers",
      "apiVersion": "2020-05-01"
    },
    {
      "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/networkSecurityGroups/VNet-NSG-CASG",
      "tags": {
        "CASG-Info": "http://aka.ms/cssbaselinesecurity",
        "Creator": "Automatically added by CASG Azure Policy",
        "patchtest": "True"
      },
      "properties": {
        "provisioningState": "Succeeded",
        "resourceGuid": "7d657722-49b3-49ef-af5d-cbcf62b1f32e",
        "securityRules": [
          {
            "name": "CASG-Rule-104",
            "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/networkSecurityGroups/VNet-NSG-CASG/securityRules/CASG-Rule-104",
            "etag": "W/\"8469ec8f-4c7b-4384-a1b3-39e3e5f724c8\"",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "CSS Governance Security Rule.  Deny risky inbound.  https://aka.ms/casg",
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 104,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "13",
                "17",
                "19",
                "22",
                "23",
                "53",
                "69",
                "111",
                "119",
                "123",
                "135",
                "137",
                "138",
                "139",
                "161",
                "162",
                "389",
                "445",
                "512",
                "514",
                "593",
                "636",
                "873",
                "1433",
                "1434",
                "1900",
                "2049",
                "2301",
                "2381",
                "3268",
                "3306",
                "3389",
                "4333",
                "5353",
                "5432",
                "5800",
                "5900",
                "5985",
                "5986",
                "6379",
                "7000",
                "7001",
                "7199",
                "9042",
                "9160",
                "9300",
                "11211",
                "16379",
                "26379",
                "27017"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "CASG-Rule-103",
            "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/networkSecurityGroups/VNet-NSG-CASG/securityRules/CASG-Rule-103",
            "etag": "W/\"8469ec8f-4c7b-4384-a1b3-39e3e5f724c8\"",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "CSS Governance Security Rule.  Allow SAW inbound.  https://aka.ms/casg",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "CorpNetSaw",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 103,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "CASG-Rule-102",
            "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/networkSecurityGroups/VNet-NSG-CASG/securityRules/CASG-Rule-102",
            "etag": "W/\"8469ec8f-4c7b-4384-a1b3-39e3e5f724c8\"",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "CSS Governance Security Rule.  Allow Corpnet inbound.  https://aka.ms/casg",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "CorpNetPublic",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 102,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "CASG-Rule-101",
            "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/networkSecurityGroups/VNet-NSG-CASG/securityRules/CASG-Rule-101",
            "etag": "W/\"8469ec8f-4c7b-4384-a1b3-39e3e5f724c8\"",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "CSS Governance Security Rule.  Allow vnet inbound.  https://aka.ms/casg",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "remote-rule",
            "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/networkSecurityGroups/VNet-NSG-CASG/securityRules/remote-rule",
            "etag": "W/\"8469ec8f-4c7b-4384-a1b3-39e3e5f724c8\"",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "remote-rule",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "99.56.188.23",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "3389",
                "19000",
                "19080",
                "19081",
                "8080",
                "8081",
                "22"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ],
        "defaultSecurityRules": [
          {
            "name": "AllowVnetInBound",
            "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/networkSecurityGroups/VNet-NSG-CASG/defaultSecurityRules/AllowVnetInBound",
            "etag": "W/\"8469ec8f-4c7b-4384-a1b3-39e3e5f724c8\"",
            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Allow inbound traffic from all VMs in VNET",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 65000,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowAzureLoadBalancerInBound",
            "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/networkSecurityGroups/VNet-NSG-CASG/defaultSecurityRules/AllowAzureLoadBalancerInBound",
            "etag": "W/\"8469ec8f-4c7b-4384-a1b3-39e3e5f724c8\"",
            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Allow inbound traffic from azure load balancer",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 65001,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyAllInBound",
            "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/networkSecurityGroups/VNet-NSG-CASG/defaultSecurityRules/DenyAllInBound",
            "etag": "W/\"8469ec8f-4c7b-4384-a1b3-39e3e5f724c8\"",
            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Deny all inbound traffic",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 65500,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowVnetOutBound",
            "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/networkSecurityGroups/VNet-NSG-CASG/defaultSecurityRules/AllowVnetOutBound",
            "etag": "W/\"8469ec8f-4c7b-4384-a1b3-39e3e5f724c8\"",
            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Allow outbound traffic from all VMs to all VMs in VNET",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 65000,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowInternetOutBound",
            "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/networkSecurityGroups/VNet-NSG-CASG/defaultSecurityRules/AllowInternetOutBound",
            "etag": "W/\"8469ec8f-4c7b-4384-a1b3-39e3e5f724c8\"",
            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Allow outbound traffic from all VMs to Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Allow",
              "priority": 65001,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyAllOutBound",
            "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/networkSecurityGroups/VNet-NSG-CASG/defaultSecurityRules/DenyAllOutBound",
            "etag": "W/\"8469ec8f-4c7b-4384-a1b3-39e3e5f724c8\"",
            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Deny all outbound traffic",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 65500,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ],
        "subnets": [
          {
            "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/virtualNetworks/VNet/subnets/Subnet-0"
          }
        ]
      },
      "location": "eastus",
      "name": "VNet-NSG-CASG",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2020-05-01"
    },
    {
      "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/publicIPAddresses/PublicIP-LB-FE-0",
      "tags": {
        "resourceType": "Service Fabric",
        "clusterName": "sfjagilber1nt3",
        "patchtest": "True"
      },
      "properties": {
        "provisioningState": "Succeeded",
        "resourceGuid": "f0e460d5-5669-488c-ba95-ac811d13fa7e",
        "ipAddress": "40.114.75.243",
        "publicIPAddressVersion": "IPv4",
        "publicIPAllocationMethod": "Dynamic",
        "idleTimeoutInMinutes": 4,
        "dnsSettings": {
          "domainNameLabel": "sfjagilber1nt3",
          "fqdn": "***REMOVED***"
        },
        "ipTags": [],
        "ipConfiguration": {
          "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/loadBalancers/LB-sfjagilber1nt3-nt0/frontendIPConfigurations/LoadBalancerIPConfig"
        }
      },
      "location": "eastus",
      "name": "PublicIP-LB-FE-0",
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2020-05-01"
    },
    {
      "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/virtualNetworks/VNet",
      "tags": {
        "resourceType": "Service Fabric",
        "clusterName": "sfjagilber1nt3",
        "patchtest": "True"
      },
      "properties": {
        "provisioningState": "Succeeded",
        "resourceGuid": "9cee6559-8f9c-412b-8b0b-10541647da45",
        "addressSpace": {
          "addressPrefixes": [
            "10.0.0.0/16"
          ]
        },
        "subnets": [
          {
            "name": "Subnet-0",
            "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/virtualNetworks/VNet/subnets/Subnet-0",
            "etag": "W/\"495d9713-20c7-4b4d-be69-f1884a92c4d8\"",
            "properties": {
              "provisioningState": "Succeeded",
              "addressPrefix": "10.0.0.0/24",
              "networkSecurityGroup": {
                "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Network/networkSecurityGroups/VNet-NSG-CASG"
              },
              "ipConfigurations": [
                {
                  "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Compute/virtualMachineScaleSets/nt0/virtualMachines/0/networkInterfaces/NIC-0/ipConfigurations/NIC-0"
                },
                {
                  "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Compute/virtualMachineScaleSets/nt0/virtualMachines/1/networkInterfaces/NIC-0/ipConfigurations/NIC-0"
                },
                {
                  "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Compute/virtualMachineScaleSets/nt0/virtualMachines/2/networkInterfaces/NIC-0/ipConfigurations/NIC-0"
                }
              ],
              "delegations": [],
              "privateEndpointNetworkPolicies": "Enabled",
              "privateLinkServiceNetworkPolicies": "Enabled"
            },
            "type": "Microsoft.Network/virtualNetworks/subnets"
          }
        ],
        "virtualNetworkPeerings": [],
        "enableDdosProtection": false,
        "enableVmProtection": false
      },
      "location": "eastus",
      "name": "VNet",
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2020-05-01"
    },
    {
      "id": "/subscriptions/***REMOVED***/resourcegroups/sfjagilber1nt3/providers/Microsoft.ServiceFabric/clusters/sfjagilber1nt3",
      "tags": {
        "resourceType": "Service Fabric",
        "clusterName": "sfjagilber1nt3"
      },
      "properties": {
        "provisioningState": "Succeeded",
        "clusterId": "139eab6c-7084-4ca4-8cc9-699af0001840",
        "clusterCodeVersion": "7.1.417.9590",
        "clusterState": "Ready",
        "managementEndpoint": "https://***REMOVED***:19080",
        "clusterEndpoint": "https://eastus.servicefabric.azure.com/runtime/clusters/139eab6c-7084-4ca4-8cc9-699af0001840",
        "certificate": {
          "thumbprint": "***REMOVED***",
          "x509StoreName": "My"
        },
        "clientCertificateThumbprints": [],
        "clientCertificateCommonNames": [],
        "fabricSettings": [
          {
            "name": "Security",
            "parameters": [
              {
                "name": "ClusterProtectionLevel",
                "value": "EncryptAndSign"
              }
            ]
          }
        ],
        "vmImage": "Windows",
        "reliabilityLevel": "Bronze",
        "nodeTypes": [
          {
            "name": "nt0",
            "vmInstanceCount": 3,
            "clientConnectionEndpointPort": 19000,
            "httpGatewayEndpointPort": 19080,
            "applicationPorts": {
              "startPort": 20000,
              "endPort": 30000
            },
            "ephemeralPorts": {
              "startPort": 49152,
              "endPort": 65534
            },
            "isPrimary": true,
            "reverseProxyEndpointPort": 19081,
            "durabilityLevel": "Bronze"
          }
        ],
        "diagnosticsStorageAccountConfig": {
          "storageAccountName": "sflogsbmnjfzoagi7jc2",
          "primaryAccessKey": "",
          "secondaryAccessKey": "",
          "protectedAccountKeyName": "StorageAccountKey1",
          "blobEndpoint": "https://sflogsbmnjfzoagi7jc2.blob.core.windows.net/",
          "queueEndpoint": "https://sflogsbmnjfzoagi7jc2.queue.core.windows.net/",
          "tableEndpoint": "https://sflogsbmnjfzoagi7jc2.table.core.windows.net/",
          "protectedAccountKeyName2": ""
        },
        "upgradeMode": "Automatic",
        "addonFeatures": [
          "DnsService",
          "RepairManager"
        ],
        "availableClusterVersions": [
          {
            "codeVersion": "7.1.417.9590",
            "supportExpiryUtc": "9999-12-31T23:59:59.9999999Z",
            "environment": "Windows"
          }
        ]
      },
      "location": "eastus",
      "name": "sfjagilber1nt3",
      "type": "Microsoft.ServiceFabric/clusters",
      "apiVersion": "2020-03-01"
    },
    {
      "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Storage/storageAccounts/bmnjfzoagi7jc3",
      "tags": {
        "resourceType": "Service Fabric",
        "clusterName": "sfjagilber1nt3"
      },
      "properties": {
        "privateEndpointConnections": [],
        "networkAcls": {
          "bypass": "AzureServices",
          "virtualNetworkRules": [],
          "ipRules": [],
          "defaultAction": "Allow"
        },
        "supportsHttpsTrafficOnly": false,
        "encryption": {
          "services": {
            "file": {
              "keyType": "Account",
              "enabled": true,
              "lastEnabledTime": "2020-07-15T14:45:13.405584Z"
            },
            "blob": {
              "keyType": "Account",
              "enabled": true,
              "lastEnabledTime": "2020-07-15T14:45:13.405584Z"
            }
          },
          "keySource": "Microsoft.Storage"
        },
        "provisioningState": "Succeeded",
        "creationTime": "2020-07-15T14:45:13.3118284Z",
        "primaryEndpoints": {
          "blob": "https://bmnjfzoagi7jc3.blob.core.windows.net/",
          "queue": "https://bmnjfzoagi7jc3.queue.core.windows.net/",
          "table": "https://bmnjfzoagi7jc3.table.core.windows.net/",
          "file": "https://bmnjfzoagi7jc3.file.core.windows.net/"
        },
        "primaryLocation": "eastus",
        "statusOfPrimary": "available"
      },
      "location": "eastus",
      "name": "bmnjfzoagi7jc3",
      "type": "Microsoft.Storage/storageAccounts",
      "apiVersion": "2019-06-01"
    },
    {
      "id": "/subscriptions/***REMOVED***/resourceGroups/sfjagilber1nt3/providers/Microsoft.Storage/storageAccounts/sflogsbmnjfzoagi7jc2",
      "tags": {
        "resourceType": "Service Fabric",
        "clusterName": "sfjagilber1nt3",
        "patchtest": "True"
      },
      "properties": {
        "privateEndpointConnections": [],
        "networkAcls": {
          "bypass": "AzureServices",
          "virtualNetworkRules": [],
          "ipRules": [],
          "defaultAction": "Allow"
        },
        "supportsHttpsTrafficOnly": false,
        "encryption": {
          "services": {
            "file": {
              "keyType": "Account",
              "enabled": true,
              "lastEnabledTime": "2020-07-15T14:45:13.3274964Z"
            },
            "blob": {
              "keyType": "Account",
              "enabled": true,
              "lastEnabledTime": "2020-07-15T14:45:13.3274964Z"
            }
          },
          "keySource": "Microsoft.Storage"
        },
        "provisioningState": "Succeeded",
        "creationTime": "2020-07-15T14:45:13.2337279Z",
        "primaryEndpoints": {
          "blob": "https://sflogsbmnjfzoagi7jc2.blob.core.windows.net/",
          "queue": "https://sflogsbmnjfzoagi7jc2.queue.core.windows.net/",
          "table": "https://sflogsbmnjfzoagi7jc2.table.core.windows.net/",
          "file": "https://sflogsbmnjfzoagi7jc2.file.core.windows.net/"
        },
        "primaryLocation": "eastus",
        "statusOfPrimary": "available"
      },
      "location": "eastus",
      "name": "sflogsbmnjfzoagi7jc2",
      "type": "Microsoft.Storage/storageAccounts",
      "apiVersion": "2019-06-01"
    }
  ],
  "outputs": {},
  "$schema": "http://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json",
  "variables": {}
}
